# OVU

./: .gitignore  CMakeLists.txt  OVU.apparmor  README.md  manifest.json.in
app/: BookDelegate.qml  BookEntry.qml  BookPage.qml  CMakeLists.txt  Cover.qml  DownloadAction.qml  ErrorView.qml  InfoPage.qml  NavigationEntry.qml  NavigationPage.qml  NavigationView.qml  Network.qml  NewSourceDialog.qml  NextLinkEntry.qml  OPDSPage.qml  OPDSView.qml  OVU.desktop.in  OVU.qml  SharePage.qml  SourcesPage.qml
app/tests/autopilot/: run
app/tests/autopilot/OVU/main/: test_main.py
backend/: CMakeLists.txt
backend/modules/OVU/: Feed.cpp  Feed.h  FeedModel.cpp  FeedModel.h  backend.cpp  backend.h  qmldir
backend/modules/OVU/Elements/: AcquisitionElement.cpp  AcquisitionElement.h  AuthorElement.cpp  AuthorElement.h  ContentElement.cpp  ContentElement.h  Element.cpp  Element.h  EntryElement.cpp  EntryElement.h  LinkElement.cpp  LinkElement.h  NameElement.cpp  NameElement.h  NavigationFeedElement.cpp  NavigationFeedElement.h  NextLinkElement.cpp  NextLinkElement.h  ThumbnailElement.cpp  ThumbnailElement.h  TitleElement.cpp  TitleElement.h
backend/modules/OVU/Handlers/: AuthorHandler.cpp  AuthorHandler.h  ContentHandler.cpp  ContentHandler.h  EntryHandler.cpp  EntryHandler.h  Handler.cpp  Handler.h  HandlersMap.cpp  HandlersMap.h  LinkHandler.cpp  LinkHandler.h  NameHandler.cpp  NameHandler.h  TitleHandler.cpp  TitleHandler.h
backend/tests/unit/c++/: AuthorHandler_test.cpp  CMakeLists.txt  ContentHandler_test.cpp  EntryHandler_test.cpp  LinkElement_test.cpp  LinkHandler_test.cpp  NameHandler_test.cpp  TitleHandler_test.cpp  simple.cpp
backend/tests/unit/qml/: tst_empty.qml  tst_mytype.qml
cmake/: BackendModule.cmake  Click.cmake  Test.cmake
po/: CMakeLists.txt  fr.po  ovu.egormatirov.pot  ovu.ematirov.pot  ru.mo  ru.po
